--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@hooks/*": ["hooks/*"] 
+      "@hooks/*": ["hooks/*"],
+      "@components/*": ["components/*"]
     }
   },
   "include": [
